--- a/templates/maket.html
+++ b/templates/maket.html
@@ -3,19 +3,16 @@
 {% block body %}
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Главная</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Ваши работы</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Ожидают проверки</a></li>
       </ul>
-
       <div class="col-md-3 text-end">
-        <a href="sign-in.html?command=logout"><button type="button" class="btn btn-outline-primary me-2">Logout</button></a>
+        <a href="logout.html"><button type="button" class="btn btn-outline-primary me-2">Logout</button></a>
       </div>
     </header>
-  </div>
+</div>
+<div class="container">
+
+</div>
 {% endblock %}
