--- a/templates/to-do.html
+++ b/templates/to-do.html
@@ -6,7 +6,7 @@
     <div class="col-lg-3">{{ task.discipline }}</div>
     <div class="col-lg-3">{{ task.theme }}</div>
     <div class="col-lg-3">{{ task.name }}</div>
-    <div class="col-lg-3"><a href="solving?task={{ task.id }}&back=to-do">Загрузить решение</a></div>
+    <div class="col-lg-3"><a href="solvings?task={{ task.id }}">Загрузить решение</a></div>
 </div>
 <div class="row">
     <div class="col-lg-12">{{ task.text }}</div>
