Добавил вывод списка задач

--- a/templates/my-works.html
+++ b/templates/my-works.html
@@ -5,7 +5,7 @@
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li><a href="to-do" class="nav-link px-2 link-dark">Не начаты</a></li>
     <li><a href="#" class="nav-link px-2 link-dark">Требуют исправления</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">Горизотнальная проверка</a></li>
+    <li><a href="horizontal-review" class="nav-link px-2 link-dark">Горизотнальная проверка</a></li>
     <li><a href="#" class="nav-link px-2 link-dark">Вертикальная проверка</a></li>
   </ul>
 </header>
