Добавил вывод списка задач

--- a/templates/to-do.html
+++ b/templates/to-do.html
@@ -1,15 +1,37 @@
 {% extends 'my-works.html' %}
 
 {% block content %}
+{% if task_data %}
+<div class="row">
+    <div class="col-lg-3">{{ task_data.discipline }}</div>
+    <div class="col-lg-3">{{ task_data.theme }}</div>
+    <div class="col-lg-3">{{ task_data.name }}</div>
+    <div class="col-lg-3"><a href="solvings?task={{ task_data.id }}">Загрузить решение</a></div>
+</div>
+<div class="row">
+    <h4>Задание</h4>
+</div>
+<div class="row">
+    <div class="col-lg-12">{{ task_data.text }}</div>
+</div>
+<div class="row">
+    <h4>Требования</h4>
+</div>
+    {% for requirement in task_data.requirements %}
+    <div class="row">
+        <div class="col-lg-12">{{ requirement.text }}</div>
+    </div>
+    {% endfor %}
+{% endif %}
+<div class="row">
+    <h4>Список работ</h4>
+</div>
 {% for task in tasks %}
 <div class="row">
     <div class="col-lg-3">{{ task.discipline }}</div>
     <div class="col-lg-3">{{ task.theme }}</div>
-    <div class="col-lg-3">{{ task.name }}</div>
+    <div class="col-lg-3"><a href="to-do?task={{ task.id }}">{{ task.name }}</a></div>
     <div class="col-lg-3"><a href="solvings?task={{ task.id }}">Загрузить решение</a></div>
-</div>
-<div class="row">
-    <div class="col-lg-12">{{ task.text }}</div>
 </div>
 {% endfor %}
 {% endblock %}
