--- a/templates/maket.html
+++ b/templates/maket.html
@@ -5,7 +5,7 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="my-works" class="nav-link px-2 link-dark">Ваши работы</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Ожидают проверки</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Нужно проверить</a></li>
       </ul>
       <div class="col-md-3 text-end">
         <a href="logout"><button type="button" class="btn btn-outline-primary me-2">Logout</button></a>
