--- a/templates/task.html
+++ b/templates/task.html
@@ -2,13 +2,64 @@
 
 {% block center %}
 <div class="container">
-  <div class="row">
-      <div class="col-lg-4 d-flex justify-content-end">Заголовок задачи</div>
-      <div class="col-lg-8">{{ task.name }}</div>
-  </div>
-  <div class="row">
-      <div class="col-lg-4 d-flex justify-content-end">Необходимое количество положительных проверок</div>
-      <div class="col-lg-8">{{ task.count_review }}</div>
-  </div>
+    <div class="row">
+        <h4>Задача</h4>
+    </div>
+    <div class="row">
+        <div class="col-lg-2">Название</div>
+        <div class="col-lg-10">{{ task.name }}</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2">Количество проверок</div>
+        <div class="col-lg-10">{{ task.count_review }}</div>
+    </div>
+    <div class="row">
+        <h4>Ход работы</h4>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">{{ task.text}}</div>
+    </div>
+    <div class="row">
+        <h4>Требования</h4>
+    </div>
+    <div class="row">
+        <ul>
+            {% for requirement in task.requirement %}
+            <li>{{ requirement }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="row">
+        <h4>Загрузить новое решение</h4>
+        <form method="post" class="col-lg-3" enctype=multipart/form-data>
+            <div class="form-group">
+                <label for="zip">Прикрепите архив zip</label>
+                <input type="file" id="zip" class="form-control" name="zip" accept="application/zip"
+                       required="required">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-lg" value="Загрузить">
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <h4>История решений</h4>
+    </div>
+    <div class="row">
+        <div class="col-lg-3"> Загружено</div>
+        <div class="col-lg-3"> Количество проверок</div>
+        <div class="col-lg-3"> Проверки</div>
+    </div>
+    {% for solving in task.solving %}
+    <div class="row">
+        <div class="col-lg-3">{{ solving.created_at }}</div>
+        <div class="col-lg-3">{{ solving.review_count }}</div>
+        <div class="col-lg-6">
+            {% for review in solving.review %}
+            {{ review.status }}
+            {% endfor %}
+        </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
