Добавил вывод списка задач

--- a/templates/solvings.html
+++ b/templates/solvings.html
@@ -1,4 +1,4 @@
-{% extends 'works.html' %}
+{% extends 'student_task.html' %}
 
 {% block content %}
 <form method="post" enctype=multipart/form-data>
