--- a/templates/review.html
+++ b/templates/review.html
@@ -11,7 +11,7 @@
   <div class="row">
       <div class="col-lg-3">{{ task.discipline }}</div>
       <div class="col-lg-3">{{ task.theme }}</div>
-      <div class="col-lg-3"><a href="/student_task/{{ task.id }}">{{ task.task }}</a></div>
+      <div class="col-lg-3"><a href="/review/{{ task.id }}">{{ task.task }}</a></div>
   </div>
 {% endfor %}
 </div>
