Блок загрузки файла отображается если работа не сдана

--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -8,12 +8,12 @@
         <div class="col-lg-3">Задача</div>
         <div class="col-lg-3">Статус</div>
     </div>
-    {% for task in tasks %}
+    {% for student_task_item in student_task %}
     <div class="row">
-        <div class="col-lg-3">{{ task.discipline }}</div>
-        <div class="col-lg-3">{{ task.theme }}</div>
-        <div class="col-lg-3"><a href="/student_task/{{ task.id }}">{{ task.task }}</a></div>
-        <div class="col-lg-3">{{ task.status }}</div>
+        <div class="col-lg-3">{{ student_task_item.discipline }}</div>
+        <div class="col-lg-3">{{ student_task_item.theme }}</div>
+        <div class="col-lg-3"><a href="/student_task/{{ student_task_item.id }}">{{ student_task_item.task }}</a></div>
+        <div class="col-lg-3">{{ student_task_item.status }}</div>
     </div>
     {% endfor %}
 </div>
