--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -7,28 +7,29 @@
     </div>
     <div class="row">
         <div class="col-lg-2">Название</div>
-        <div class="col-lg-10">{{ task.name }}</div>
+        <div class="col-lg-10">{{ student_task.name }}</div>
     </div>
     <div class="row">
         <div class="col-lg-2">Количество проверок</div>
-        <div class="col-lg-10">{{ task.count_review }}</div>
+        <div class="col-lg-10">{{ student_task.count_review }}</div>
     </div>
     <div class="row">
         <h4>Ход работы</h4>
     </div>
     <div class="row">
-        <div class="col-lg-12">{{ task.text}}</div>
+        <div class="col-lg-12">{{ student_task.text}}</div>
     </div>
     <div class="row">
         <h4>Требования</h4>
     </div>
     <div class="row">
         <ul>
-            {% for requirement in task.requirement %}
+            {% for requirement in student_task.requirement %}
             <li>{{ requirement }}</li>
             {% endfor %}
         </ul>
     </div>
+    {% if student_task.load_file %}
     <div class="row">
         <h4>Загрузить новое решение</h4>
         <form method="post" class="col-lg-3" enctype=multipart/form-data>
@@ -42,6 +43,7 @@
             </div>
         </form>
     </div>
+    {% endif %}
     <div class="row">
         <h4>История решений</h4>
     </div>
@@ -50,7 +52,7 @@
         <div class="col-lg-3"> Количество проверок</div>
         <div class="col-lg-3"> Проверки</div>
     </div>
-    {% for solving in task.solving %}
+    {% for solving in student_task.solving %}
     <div class="row">
         <div class="col-lg-3">{{ solving.created_at }}</div>
         <div class="col-lg-3">{{ solving.review_count }}</div>
