Добавил заготовку для отображения списка дисциплин у преподавателя

--- a/templates/maket.html
+++ b/templates/maket.html
@@ -9,7 +9,7 @@
             {% endif %}
             <li><a href="/solving" class="nav-link px-2 link-dark">Нужно проверить</a></li>
             {% if 'teacher' in user_type() %}
-            <li><a href="/solving" class="nav-link px-2 link-dark">Ваши дисциплины</a></li>
+            <li><a href="/discipline" class="nav-link px-2 link-dark">Ваши дисциплины</a></li>
             {% endif %}
         </ul>
         <div class="col-md-8 text-end">
