Добавлена возможность скачать проверяемый архив

--- a/templates/solving_id.html
+++ b/templates/solving_id.html
@@ -16,6 +16,12 @@
         <div class="col-lg-12">{{ task.text}}</div>
     </div>
     <div class="row">
+        <h4>Решение</h4>
+    </div>
+    <div class="row">
+        <div class="col-lg-12"><a href="/files/{{ task.file_path }}">Скачать</a></div>
+    </div>
+    <div class="row">
         <h4>Требования</h4>
     </div>
     <form method="post">
