Добавила строку eboy

--- a/templates/maket.html
+++ b/templates/maket.html
@@ -22,6 +22,7 @@
 </div>
 <div class="container">
     {% block center %}{% endblock %}
+    <p>Hi broy e boy</p>
 </div>
 {% endblock %}
-<p>Hi broy</p>
+
