--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <label for="zip">Прикрепите архив zip</label>
                 <input type="file" id="zip" class="form-control" name="zip" accept="application/zip"
-                       required="required">
+                       required="required" size="20971520">
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-primary btn-lg" value="Загрузить">
