--- a/templates/task.html
+++ b/templates/task.html
@@ -28,7 +28,7 @@
     </div>
     {% for task in data %}
     <div class="row">
-        <div class="col-lg-12"><a href="{{ url_for('required', task=task.id) }}">{{ task.name }}</a></div>
+        <div class="col-lg-12"><a href="{{ url_for('requirement', task=task.id) }}">{{ task.name }}</a></div>
     </div>
     {% endfor %}
 </div>
