Фильтрация студентов при добавлении к дисциплине

--- a/templates/discipline.html
+++ b/templates/discipline.html
@@ -3,8 +3,9 @@
 {% block center %}
 <div class="container">
     <form method="post">
+        <h4>Добавить дисциплину</h4>
         <div class="row">
-            <label class="col-lg-5" for="name">Введите название новой дисциплины</label>
+            <label class="col-lg-5" for="name">Название</label>
             <input class="col-lg-5" type="text" name="name" id="name">
             <input class="col-lg-1 offset-lg-1" id="submit" type="submit" value="Добавить">
         </div>
