Фильтрация студентов по группа при добавлении его к дисциплине

--- a/templates/theme.html
+++ b/templates/theme.html
@@ -7,11 +7,12 @@
 {% block center %}
 <div class="container">
     <div class="row">
-        <h4>{{ discipline }}</h4>
+        <h4>{{ discipline.name }}</h4>
     </div>
     <form action="student_discipline" method="post">
         <h4>Добавить студента к дисциплине</h4>
         <div class="row">
+            <input type="hidden" value="{{ discipline.id }}" name="discipline">
             <label class="col-lg-1" for="group">Группа</label>
             <select class="col-lg-3" class="form-select" name="group" id="group">
                 <option disabled selected value>Не выбрана</option>
