--- a/templates/discipline.html
+++ b/templates/discipline.html
@@ -16,7 +16,7 @@
     </div>
     {% for discipline in data %}
     <div class="row">
-        <div class="col-lg-12"><a href="{{ url_for('theme', discipline=discipline.id) }}">{{ discipline.name }}</a></div>
+        <div class="col-lg-12"><a href="{{ url_for('theme', discipline=discipline.id, not_discipline='') }}">{{ discipline.name }}</a></div>
     </div>
     {% endfor %}
 </div>
