--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -14,10 +14,7 @@
         <div class="col-lg-10">{{ student_task.count_review }}</div>
     </div>
     <div class="row">
-        <h4>Ход работы</h4>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">{{ student_task.text}}</div>
+        <div class="col-lg-12"><a href="{{ student_task.link }}">Ссылка</a></div>
     </div>
     <div class="row">
         <h4>Требования</h4>
