--- a/templates/theme.html
+++ b/templates/theme.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'maket.html' %}
 
 {% block scripts %}
 <script language="JavaScript" type="text/javascript" src={{url_for('static', filename='js/theme.js' )}}></script>
