--- a/templates/sign.html
+++ b/templates/sign.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block body %}
 <div class="container">
     <div class="input-box">
         <div class="svg-background"></div>
@@ -10,3 +11,4 @@
         {% block formcontent %}{% endblock %}
     </div>
 </div>
+{% endblock %}
