исправление поинтов, довлнен линк на кнопку зарегистрироваться

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -20,6 +20,6 @@
 </form>
 <div class="input-box otstup29">
     <p class="prof">Нет профиля?</p>
-    <button class="registrbutton">Регистрация</button>
+    <button class="registrbutton" onclick="window.location.href='{{ url_for('sign-up') }}'">Регистрация</button>
 </div>
 {% endblock %}
