--- a/templates/sign.html
+++ b/templates/sign.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block head %}<link rel="stylesheet" href={{url_for('static', filename='css/sign.css' )}} integrity="undefined" crossorigin="anonymous">{% endblock %}
 {% block body %}
 <div class="container">
     <div class="input-box">
