--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,7 +35,7 @@
   .content form .user-details{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     margin: 20px 0 12px 0;
   }
  .input-box{
@@ -54,7 +54,7 @@
     color: #153C60;
   }
   .user-details .input-box input{
-    width: 252px;
+    width: 100%;
     height: 40px;
     outline: none;
     font-size: 16px;
