Добавил переключение меню в зависимости от текущего request.endpoint

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,13 +2,13 @@
     <div class="pointsinheader">
         <div class="points">
             {% if 'student' in user_type() %}
-            <a href="/student_task" class="onepoint">Мои работы</a>
+            <a href="/student_task" class="onepoint {% if url_for(request.endpoint) == '/student_task' %}active{% endif %}">Мои работы</a>
             {% endif %}
             {% if 'student' in user_type() or 'teacher' in user_type() %}
-            <a href="/solving" class="onepoint active">Ожидает проверки</a>
+            <a href="/solving" class="onepoint {% if url_for(request.endpoint) == '/solving' %}active{% endif %}">Ожидает проверки</a>
             {% endif %}
             {% if 'teacher' in user_type() %}
-            <a href="/discipline" class="onepoint">Мои дисциплины</a>
+            <a href="/discipline" class="onepoint {% if url_for(request.endpoint) == '/discipline' %}active{% endif %}">Мои дисциплины</a>
             {% endif %}
         </div>
     <div class="helloandbye">
