Убрала лишний символ, добавила отступы.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,69 +1,67 @@
  body{
-   font-family: 'Roboto', sans-serif;
-   height: 100vh;
-   padding: 0px;
-   background: #F0F8FF;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    padding: 0px;
+    background: #F0F8FF;
 }
 .row{
-width:100%;
-margin:0;
+    width:100%;
+    margin:0;
 }
 .novisible{
-visibility: hidden;
-position:absolute;
+    visibility: hidden;
+    position:absolute;
 }
 .container{
-max-width:none;
-margin:0px;
-padding:0px;
-width:100%;
+    max-width:none;
+    margin:0px;
+    padding:0px;
+    width:100%;
 }
 header{
-height:65px;
-width:100%;
-background-color:white;
+    height:65px;
+    width:100%;
+    background-color:white;
 }
 .pointsinheader{
-min-height:65px;
-display:flex;
-align-items:center;
-box-shadow: 0 0 100px 0 rgba(44,73,127,0.2);
-background-color:white;
+    min-height:65px;
+    display:flex;
+    align-items:center;
+    box-shadow: 0 0 100px 0 rgba(44,73,127,0.2);
+    background-color:white;
 }
 .points{
-margin-left:160px;
+    margin-left:160px;
 }
 @media screen and (max-width: 1200px) {
-.points{
-margin-left:20px;
-}
+    .points{margin-left:20px;}
 }
 .helloandbye{
-margin-right:40px;
-margin-left:auto;
-margin-top:auto;
-margin-bottom:auto;
+    margin-right:40px;
+    margin-left:auto;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 .onepoint{
-margin-right:70px;
-display:inline-block;
-color: #3B5165;
-font-size:24px;
+    margin-right:70px;
+    display:inline-block;
+    color: #3B5165;
+    font-size:24px;
 }
 a{
-text-decoration:none;
+    text-decoration:none;
 }
 .logoutbutton{
-margin-left:60px;
-font-size:22px;
-height:45px;
-width:130px;
-background-color:#DAE6E5;
-border-radius:10px;
-border:2px solid #DAE6E5;
-font-weight:400;
-color: #153C60;
+    margin-left:60px;
+    font-size:22px;
+    height:45px;
+    width:130px;
+    background-color:#DAE6E5;
+    border-radius:10px;
+    border:2px solid #DAE6E5;
+    font-weight:400;
+    color: #153C60;
 }
 .active{
-font-weight:700;
+    font-weight:700;
 }
