--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,23 @@
 <header>
-    <div class="pointsinheader">
+    <div class="points-in-header">
         <div class="points">
             {% if 'student' in user_type() %}
-            <a href="/student_task" class="onepoint {% if url_for(request.endpoint) == '/student_task' %}active{% endif %}">Мои работы</a>
+            <a href="/student_task"
+               class="onepoint {% if url_for(request.endpoint) == '/student_task' %}active{% endif %}">Мои работы</a>
             {% endif %}
             {% if 'student' in user_type() or 'teacher' in user_type() %}
-            <a href="/solving" class="onepoint {% if url_for(request.endpoint) == '/solving' %}active{% endif %}">Ожидает проверки</a>
+            <a href="/solving" class="onepoint {% if url_for(request.endpoint) == '/solving' %}active{% endif %}">Ожидает
+                проверки</a>
             {% endif %}
             {% if 'teacher' in user_type() %}
-            <a href="/discipline" class="onepoint {% if url_for(request.endpoint) == '/discipline' %}active{% endif %}">Мои дисциплины</a>
+            <a href="/discipline" class="onepoint {% if url_for(request.endpoint) == '/discipline' %}active{% endif %}">Мои
+                дисциплины</a>
             {% endif %}
         </div>
-    <div class="helloandbye">
-        Добро пожаловать, {{ first_name() }} <a href="/logout">
-        <button type="button" class="logoutbutton">Выход</button>
-    </a>
-    </div>
+        <div class="helloandbye">
+            Добро пожаловать, {{ first_name() }} <a href="/logout">
+            <button type="button" class="common-button logout">Выход</button>
+        </a>
+        </div>
     </div>
 </header>
