--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
             {% endif %}
             {% if 'student' in user_type() %}
             <a href="/student_task"
-               class="onepoint {% if url_for(request.endpoint) == '/student_task' %}active{% endif %}">Мои работы</a>
+               class="one-point {% if url_for(request.endpoint) == '/student_task' %}active{% endif %}">Мои работы</a>
             {% endif %}
         </div>
         <div class="hello-and-bye">
