--- a/templates/solving.html
+++ b/templates/solving.html
@@ -1,18 +1,20 @@
 {% extends 'maket.html' %}
 
 {% block center %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-3">Дисциплина</div>
-        <div class="col-lg-3">Тема</div>
-        <div class="col-lg-3">Задача</div>
-    </div>
-    {% for task in tasks %}
-    <div class="row">
+<div class="container-screen">
+    <div class="table">
+        <div class="cell">Дисциплина</div>
+        <div class="cell">Тема</div>
+        <div class="cell">Название задачи</div>
+        <div class="cell">Технологии разработки программного обеспечения</div>
+        <div class="cell">Технологии разработки программного обеспечения</div>
+        <div class="cell">Технологии разработки программного обеспечения</div>
+        {% for task in tasks %}
         <div class="col-lg-3">{{ task.discipline }}</div>
         <div class="col-lg-3">{{ task.theme }}</div>
         <div class="col-lg-3"><a href="/solving/{{ task.id }}">{{ task.task }}</a></div>
+        {% endfor %}
     </div>
-    {% endfor %}
+    <div class="notification no-visible">На данный момент работы, требующей вашей проверки, нет. Отдыхайте.</div>
 </div>
 {% endblock %}
