--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,7 @@
     min-height: 90vh;
     display: flex;
     flex-direction: column;
-    padding:40px 0px;
+    padding:40px 0;
 }
 header{
     height:65px;
@@ -102,34 +102,33 @@ a{
   background-color: #3b5165;
   color: white;
   font-size: 24px;
-  padding:0px;
+  padding:0;
 }
 .cell:first-of-type{
-border-top-left-radius: 10px;
+    border-top-left-radius: 10px;
 }
 .cell:last-of-type{
-border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .cell:nth-of-type(3){
-border-top-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .cell:nth-last-of-type(3){
-border-bottom-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .notification {
-  width: 900px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 50px;
-  font-size: 18px;
-  margin: auto;
-  border: 1px solid none;
-  background-color: white;
-  box-shadow: 0 0 100px 0 rgba(44, 73, 127, 0.21);
-  border-radius: 10px;
-  font-size: 22px;
-  color: #3b5165;
+    width: 900px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50px;
+    margin: auto;
+    border: 1px solid none;
+    background-color: white;
+    box-shadow: 0 0 100px 0 rgba(44, 73, 127, 0.21);
+    border-radius: 10px;
+    font-size: 22px;
+    color: #3b5165;
 }
 
 
