--- a/static/css/main.css
+++ b/static/css/main.css
@@ -98,7 +98,7 @@ a{
     padding:10px;
 }
 .cell:first-of-type, .cell:nth-of-type(2), .cell:nth-of-type(3){
-  transform: translate(0px,-0.5px);
+  transform: translate(0,-0.5px);
   background-color: #3b5165;
   color: white;
   font-size: 24px;
